<resources>
    <string name="app_name">MyFitness</string>
    <string name="image_home" translatable="false" />
    <string name="place_title" translatable="false" />
    <string name="title_home_navbar" translatable="false">Home</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="add_new_workout">New workout</string>
    <string name="title_addWorkout">Add Workout</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="images_for_exercise">Images for exercise</string>
    <string name="elenco_esercizi">Exercises</string>
    <string name="workout_name">Workout Name</string>
    <string name="images_for_notice" >Immagine Notifica</string>
    <string name="title_addExercise">Add Exercise</string>
    <string name="back" translatable="false"><![CDATA[<-]]></string>
    <string name="bac" translatable="false"><![CDATA[<-]]></string>
    <string name="forward" translatable="false"><![CDATA[->]]></string>
    <string name="title_detailsWorkout">Workout Details</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="modify_profile">Modify Profile</string>
    <string name="birthday_date">Birthday date</string>
    <string name="surname">Surname</string>
    <string name="take_new_image_profile">Take new image profile</string>
    <string name="name">Name</string>
    <string name="image_captured" translatable="false">Image Captured</string>
    <string name="save_profile">Save Profile</string>
    <string name="name_exercise">Name Exercise</string>
    <string name="sets">Reps for Sets</string>
    <string name="weights">Weights for Sets (Kg)</string>
    <string name="rest">Rest for sets (min)</string>
    <string name="add">Add</string>
    <string name="title_detailsExercise">Exercise Details</string>
    <string name="title_gymPos">Gym</string>
    <string name="title_settings">Settings</string>
    <string name="titleAlertNOWorkout">Insert Title</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="titleAlertDeleteW">Delete this workout?</string>
    <string name="DELETE">DELETE</string>
    <string name="DISMISS">DISMISS</string>
    <string name="titleAlertDeleteEx">Delete this Exercise?</string>
    <string name="titleAlertDeleteN">Delete this Notice?</string>
    <string name="nameProfile">nameProfile</string>
    <string name="surnameProfile">surnameProfile</string>
    <string name="dateBirthayProfile">dateBirthayProfile</string>
    <string name="imageProfile">imageProfile</string>
    <string name="modify_exercise">modify exercise</string>
</resources>