<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home_navbar"
        android:fontFamily="@font/poppins_regular"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_workouts"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_workouts"
        android:fontFamily="@font/poppins_regular"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        android:fontFamily="@font/poppins_regular"
        app:showAsAction="ifRoom"/>

</menu>